workhorse/gitops/cluster/dev/argocd/ingress/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dev
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - argocd.dev.local
      secretName: argocd-dev
  ingressClassName: nginx
  rules:
    - host: argocd.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
